# university-registration-system

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/students/: route.ts
frontend/src/app/api/students/[id]/: route.ts
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/students/: StudentForm.tsx  StudentList.tsx  StudentModal.tsx
frontend/src/types/: next-auth.d.ts  student.ts
migrations/2023-03-20-000002_create_users_and_roles/: down.sql  up.sql
migrations/2024-11-10-091002_create_students/: up.sql
src/: auth_middleware.rs  main.rs  metrics_middleware.rs  models.rs  schema.rs
src/config/: mod.rs  prometheus.rs
src/db/: error.rs  mod.rs
src/db/repository/: mod.rs
src/handlers/: auth.rs  mod.rs  student.rs
src/middleware/: auth.rs  metrics.rs  mod.rs
src/models/: audit.rs  mod.rs  role.rs  student.rs  user.rs
