[package]
name = "university_registration"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"         # Web server for handling HTTP requests
actix-rt = "2.5.0"           # Runtime for async tasks in Actix
diesel = { version = "2.0.0", features = ["postgres"] } # Database ORM
dotenv = "0.15.0"            # Manages environment variables
env_logger = "0.10"         # Logger for Actix and Rust
log = "0.4"                 # Logging API
serde = { version = "1.0", features = ["derive"] } # For serializing data to JSON
serde_json = "1.0"           # JSON handling
validator = { version = "0.14", features = ["derive"] }     # Input validation
